[gd_scene load_steps=65 format=3 uid="uid://bhuo2n608ceo8"]

[ext_resource type="Texture2D" uid="uid://bsck7givmue2h" path="res://Assets/player_idle.png" id="1"]
[ext_resource type="Script" path="res://Player1/Player.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cgr7cgkrlfuq5" path="res://Hitboxes and Hurtboxes/SwordHitbox.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bvgcd1kuixuwi" path="res://Player1/PlayerStats.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://cxlmmqghiysk0" path="res://Assets/NES - Double Dragon - Abobo.png" id="4_mgh8k"]
[ext_resource type="PackedScene" path="res://Hitboxes and Hurtboxes/PlayerHurtbox.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://bs6jiwu68tsbu" path="res://Assets/sheet.png" id="11_xgpsy"]

[sub_resource type="AnimationNodeAnimation" id="11"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="12"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="13"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="15"]
blend_point_0/node = SubResource("11")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("12")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("13")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("14")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="16"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="17"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="18"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="19"]
animation = &"run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="20"]
blend_point_0/node = SubResource("16")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("17")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("18")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("19")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="21"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="22"]
animation = &"attack_down"

[sub_resource type="AnimationNodeAnimation" id="23"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="24"]
animation = &"attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="25"]
blend_point_0/node = SubResource("21")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("22")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("23")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("24")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="26"]

[sub_resource type="AnimationNodeStateMachineTransition" id="39"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d16wo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wx2hh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w0l2h"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jdutm"]

[sub_resource type="AnimationNodeStateMachine" id="28"]
states/End/position = Vector2(533, 157)
states/Idle/node = SubResource("15")
states/Idle/position = Vector2(92, 37)
states/Run/node = SubResource("20")
states/Run/position = Vector2(400, 37)
states/Start/position = Vector2(-78, 123)
states/attack/node = SubResource("25")
states/attack/position = Vector2(257, 181)
transitions = ["Idle", "Run", SubResource("26"), "Idle", "attack", SubResource("39"), "attack", "Idle", SubResource("AnimationNodeStateMachineTransition_d16wo"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_wx2hh"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_w0l2h"), "Idle", "End", SubResource("AnimationNodeStateMachineTransition_jdutm")]
graph_offset = Vector2(-164, -51)

[sub_resource type="AnimationNodeStateMachinePlayback" id="29"]

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="6"]
resource_name = "attack_down"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [90.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack_down"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_anim_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="7"]
resource_name = "attack_left"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [180.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack_left"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_anim_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="8"]
resource_name = "attack_right"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack_right"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_anim_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="9"]
resource_name = "attack_up"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitboxPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-90.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack_up"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_anim_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="30"]
resource_name = "idle_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="31"]
resource_name = "idle_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="32"]
resource_name = "idle_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="33"]
resource_name = "idle_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="34"]
resource_name = "run_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="35"]
resource_name = "run_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="36"]
resource_name = "run_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="37"]
resource_name = "run_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4y1kf"]
_data = {
"RESET": SubResource("5"),
"attack_down": SubResource("6"),
"attack_left": SubResource("7"),
"attack_right": SubResource("8"),
"attack_up": SubResource("9"),
"idle_down": SubResource("30"),
"idle_left": SubResource("31"),
"idle_right": SubResource("32"),
"idle_up": SubResource("33"),
"run_down": SubResource("34"),
"run_left": SubResource("35"),
"run_right": SubResource("36"),
"run_up": SubResource("37")
}

[sub_resource type="AtlasTexture" id="84"]
atlas = ExtResource("1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdyf2"]
atlas = ExtResource("4_mgh8k")
region = Rect2(84, 0, 42, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8e8r"]
atlas = ExtResource("4_mgh8k")
region = Rect2(125, 0, 45, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2axt"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 52, 41, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl3fr"]
atlas = ExtResource("4_mgh8k")
region = Rect2(84, 0, 42, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsij4"]
atlas = ExtResource("4_mgh8k")
region = Rect2(128, 0, 41, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d22fl"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 52, 41, 52)

[sub_resource type="AtlasTexture" id="87"]
atlas = ExtResource("1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebe4u"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 0, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_erhff"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0f60"]
atlas = ExtResource("4_mgh8k")
region = Rect2(28, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_405jp"]
atlas = ExtResource("4_mgh8k")
region = Rect2(56, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q7qi"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0uk1"]
atlas = ExtResource("4_mgh8k")
region = Rect2(28, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri7de"]
atlas = ExtResource("4_mgh8k")
region = Rect2(56, 0, 28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg2bs"]
atlas = ExtResource("4_mgh8k")
region = Rect2(0, 0, 28, 54)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("84")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdyf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8e8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2axt")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl3fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsij4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d22fl")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("87")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebe4u")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erhff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0f60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_405jp")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q7qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0uk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri7de")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg2bs")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(24, 34)

[sub_resource type="CapsuleShape2D" id="4"]
radius = 5.0
height = 10.0

[sub_resource type="RectangleShape2D" id="83"]
size = Vector2(20, 30)

[node name="Player" type="CharacterBody2D"]
z_index = 12
position = Vector2(0, -4)
collision_layer = 32768
collision_mask = 16385
script = ExtResource("2")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("28")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("29")
parameters/Idle/blend_position = Vector2(0.00160003, 1.1)
parameters/Run/blend_position = Vector2(0, 0)
parameters/attack/blend_position = Vector2(0.0126157, 0.170306)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_4y1kf")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -3)
sprite_frames = SubResource("2")
animation = &"attack_right"
frame = 2
speed_scale = 0.5
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("3")

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -10)

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource("3")]

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2(16, 0)
shape = SubResource("4")
disabled = true

[node name="PlayerStats" parent="." instance=ExtResource("4")]

[node name="PlayerHurtbox" parent="." instance=ExtResource("5")]

[node name="CollisionShape2D" parent="PlayerHurtbox" index="0"]
position = Vector2(1, 4)
shape = SubResource("83")
debug_color = Color(0.211765, 0.639216, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
position = Vector2(0, 5)
texture = ExtResource("11_xgpsy")
region_enabled = true
region_rect = Rect2(64, 0, 16, 16)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="PlayerHurtbox"]
